# InvFreeVeredMOLS

./: PLAN.md  README.md  requirements.txt
examples/: demo_alg1_modified_cholesky.py  demo_alg2_sgso.py  demo_alg3_weighted_gi.py  demo_ols_python.py
python/invfree_vered_mols/: __init__.py  backend.py  bf16_linalg.py  errors.py  gram_estimator.py  kfac_hooks.py  olssm_kfac.py
python/tests/: test_backend_dispatch.py  test_kappa_scaling.py  test_solver_accuracy_cpu_gpu.py
rust/: Cargo.toml  build.rs
rust/examples/: ols_three_algorithms.rs
rust/patches/nano-gemm-c64/: Cargo.toml
rust/patches/nano-gemm-c64/src/: lib.rs
rust/src/: algorithms.rs  ffi.rs  lib.rs
rust/tests/: test_algorithms.rs
