[package]
name = "olssm"
version = "0.1.0"
edition = "2021"
description = "SM K-FAC optimizer with fast Rust backend"
license = "MIT"

[lib]
name = "olssm"
crate-type = ["cdylib", "rlib"]

[dependencies]
nalgebra = { version = "0.33", features = ["std"] }
thiserror = "1.0"
pyo3      = { version = "0.21", features = ["extension-module"], optional = true }
numpy     = { version = "0.21", optional = true }
faer      = { version = "0.19", features = ["std"] }

[build-dependencies]
cbindgen = "0.26"

[features]
default = []
python  = ["pyo3", "numpy"]
extension-module = ["python"]

[dev-dependencies]
approx = "0.5"

[patch.crates-io]
nano-gemm-c64 = { path = "patches/nano-gemm-c64" }
